--- a/templates/admin/spells/new.html.twig
+++ b/templates/admin/spells/new.html.twig
@@ -1,11 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Spell{% endblock %}
+{% block title %}New Spell
+{% endblock %}
 
 {% block body %}
-    <h1>Create new Spell</h1>
-
-    {{ include('spell/_form.html.twig') }}
-
-    <a href="{{ path('app_spell_index') }}">back to list</a>
+	<h1>Create new Spell</h1>
+	{{ include('admin/spells/_form.html.twig') }}
+	<a href="{{ path('admin_spell_index') }}">back to list</a>
 {% endblock %}
