--- a/templates/admin/spells/new.html.twig
+++ b/templates/admin/spells/new.html.twig
@@ -6,5 +6,5 @@
 {% block body %}
 	<h1>Create new Spell</h1>
 	{{ include('admin/spells/_form.html.twig') }}
-	<a href="{{ path('admin_spell_index') }}">back to list</a>
+	<a href="{{ path('admin_spell') }}">back to list</a>
 {% endblock %}
