--- a/templates/admin/spells/show.html.twig
+++ b/templates/admin/spells/show.html.twig
@@ -43,7 +43,7 @@
 		</tbody>
 	</table>
 
-	<a href="{{ path('admin_spell_index') }}">back to list</a>
+	<a href="{{ path('admin_spell') }}">back to list</a>
 
 	<a href="{{ path('admin_spell_edit', {'id': spell.id}) }}">edit</a>
 
