--- a/templates/root/index.html.twig
+++ b/templates/root/index.html.twig
@@ -4,22 +4,7 @@
 {% block body %}
 	<main style="display:grid;place-items:center;min-height:60dvh;">
 		<div style="text-align:center">
-			<h1>Wizard Cauldron</h1>
-			{% if app.user %}
-				<p>Coins:
-					{{ app.user.coins }}</p>
-				<p>
-					{# <a href="{{ path('app_collection') }}">Collection</a>
-					·
-					<a href="{{ path('app_cauldron') }}">Cauldron</a> #}
-				</p>
-			{% else %}
-				<p>
-					<a href="{{ path('app_login') }}">Login</a>
-					or
-					<a href="{{ path('app_register') }}">Register</a>
-				</p>
-			{% endif %}
+			<h1>Work in progress...</h1>
 		</div>
 	</main>
 {% endblock %}
