--- a/templates/admin/spells/edit.html.twig
+++ b/templates/admin/spells/edit.html.twig
@@ -8,7 +8,7 @@
 
 	{{ include('admin/spells/_form.html.twig', {'button_label': 'Update'}) }}
 
-	<a href="{{ path('admin_spell_index') }}">back to list</a>
+	<a href="{{ path('admin_spell') }}">back to list</a>
 
 	{{ include('admin/spells/_delete_form.html.twig') }}
 {% endblock %}
