--- a/templates/root/index.html.twig
+++ b/templates/root/index.html.twig
@@ -1,6 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block title %}/
-{% endblock %}
+{% block title %}Home{% endblock %}
 {% block body %}
 	<main style="display:grid;place-items:center;min-height:60dvh;">
 		<div style="text-align:center">
