--- a/templates/admin/spells/index.html.twig
+++ b/templates/admin/spells/index.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Spell index
+{% block title %}Spells
 {% endblock %}
 
 {% block body %}
-	<h1>Spell index</h1>
+	<h1>Spells</h1>
 
 	<table class="table">
 		<thead>
