--- a/templates/admin/spells/_delete_form.html.twig
+++ b/templates/admin/spells/_delete_form.html.twig
@@ -1,4 +1,6 @@
-<form method="post" action="{{ path('admin_spell_delete', {'id': spell.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('admin_spell_delete', {'id': spell.id}) }}" onsubmit="return confirm('Delete {{ spell.name }} ?')" class="inline">
 	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ spell.id) }}">
-	<button class="btn">Delete</button>
+	<button class="px-2.5 py-1.5 rounded-lg border border-red-500/40 text-red-300 hover:bg-red-500/10">
+		Delete
+	</button>
 </form>
