--- a/templates/admin/spells/edit.html.twig
+++ b/templates/admin/spells/edit.html.twig
@@ -1,14 +1,16 @@
 {% extends 'base.html.twig' %}
-
 {% block title %}Edit Spell
 {% endblock %}
 
 {% block body %}
-	<h1>Edit Spell</h1>
+	<h1 class="text-xl font-semibold mb-4">Edit Spell</h1>
 
-	{{ include('admin/spells/_form.html.twig', {'button_label': 'Update'}) }}
+	<div class="max-w-2xl rounded-2xl border border-white/10 bg-white/5 p-5">
+		{{ include('admin/spells/_form.html.twig', {button_label: 'Update'}) }}
+	</div>
 
-	<a href="{{ path('admin_spell') }}">back to list</a>
-
-	{{ include('admin/spells/_delete_form.html.twig') }}
+	<div class="mt-4 flex items-center gap-3">
+		<a href="{{ path('admin_spell') }}" class="underline hover:text-white">← Back to list</a>
+		{{ include('admin/spells/_delete_form.html.twig', { spell: spell }) }}
+	</div>
 {% endblock %}
